# bemorehuman

./: .gitattributes  .gitignore  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  COPYING  MANIFESTO  README.md  bemorehuman  build.sh
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: cmake-multi-platform.yml
assets/: logo.svg.license
config/: bemorehuman.conf  gpt_spec.yaml  sample.json
lib/: CMakeLists.txt  bmh-config.h  bmh-private-config.h  config.c  helpers.c
ratgen/: .gitignore  CMakeLists.txt  main.c  ratgen.h
recgen/: CMakeLists.txt  big_mem.c  hum.c  main.c  predictions.c  recgen.h  recgen.pb-c.c  recgen.pb-c.h  recgen.proto
test-accuracy/: .gitignore  CMakeLists.txt  accuracy.h  helpers.c  main.c
test-accuracy/pbfiles/: dummy.txt
valgen/: .gitignore  CMakeLists.txt  big_rat.c  convert_to_ints.sh  main.c  normalize.sh  precursors.c  valgen.h
